--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>️Santhana's Personal Site</title>
+        <title>️Santhana's Personal Site and Dipika is cool and Roshni is wierd and Sarayo is just...</title>
     </head>
     <body>
         <table cellspacing="20">
